Completed Contact form
Added an endpoint to get the messages through contact form

--- a/index.html
+++ b/index.html
@@ -191,28 +191,28 @@
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
-        <h2>Contact Me</h2>
-        <div class="contact-container">
-          <form id="contact-form">
-            <div class="input-group">
-              <input type="text" id="name" name="name" placeholder="Your Name" required />
-            </div>
-            <div class="input-group">
-              <input type="email" id="email" name="email" placeholder="Your Email" required />
-            </div>
-            <div class="input-group">
-              <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-            </div>
-            <button type="submit" class="submit-btn">Send Message</button>
-          </form>
-          <div class="social-links">
-            <a href="https://github.com/DissanayakeLYB" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/lasith-dissanayake/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="mailto:lasithdissanayake.official@gmail.com"><i class="fa fa-envelope "></i></a>
+      <h2>Contact Me</h2>
+      <div class="contact-container">
+        <form id="contact-form" action="https://formspree.io/f/xldglrjl" method="POST">
+          <div class="input-group">
+            <input type="text" id="name" name="name" placeholder="Your Name" required />
           </div>
-
+          <div class="input-group">
+            <input type="email" id="email" name="email" placeholder="Your Email" required />
+          </div>
+          <div class="input-group">
+            <textarea id="message" name="message" placeholder="Your Message" required></textarea>
+          </div>
+          <button type="submit" class="submit-btn">Send Message</button>
+        </form>
+        <div class="social-links">
+          <a href="https://github.com/DissanayakeLYB" target="_blank"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/lasith-dissanayake/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="mailto:lasithdissanayake.official@gmail.com"><i class="fa fa-envelope "></i></a>
         </div>
-      </section>
+      </div>
+    </section>
+ 
 
       <footer class="footer">
           <p>&copy; 2025 Lasith Dissanayake | All rights reserved.</p>          
