Updated Skills Section
Added skills imaegs and updated the alignings.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <span class="animated-text">Lasith Dissanayake</span>
             </h1>
             <p class="subtitle">FRONTEND DEVELOPER</p>
-            <a href="./resources/Lasith_Dissanayake_resume.pdf" download><button class="resume-btn" >RESUME</button></a>
+            <a href="./resources/Lasith_Dissanayake_resume.pdf" download><button class="resume-btn" >DOWNLOAD THE RESUME</button></a>
             <br>
             <br>
         </section>
@@ -147,47 +147,52 @@
       <h2>Skills</h2>
       <div class="skills-grid">
           <div class="skill-card ">
-              <i class="fa-brands fa-html5"></i>
+            <img src="./Images/skills/html.png"></img>
               <span class="tooltip">HTML</span>
           </div>
           <div class="skill-card ">
-              <i class="fa-brands fa-css3-alt"></i>
+            <img src="./Images/skills/css.png"></img>
               <span class="tooltip">CSS</span>
           </div>
           <div class="skill-card ">
-              <i class="fa-brands fa-js"></i>
+            <img src="./Images/skills/javascript.png"></img>
               <span class="tooltip">JavaScript</span>
           </div>
           <div class="skill-card ">
-              <i class="fa-brands fa-react"></i>
+            <img src="./Images/skills/react.png"></img>
               <span class="tooltip">React</span>
           </div>
           <div class="skill-card ">
-              <i class="fa-brands fa-git"></i>
+            <img src="./Images/skills/git.png"></img>
               <span class="tooltip">Git</span>
           </div>
           <div class="skill-card ">
-              <i class="fa-brands fa-github"></i>
+            <img style="filter: invert(1);" src="./Images/skills/github.png"></img>
               <span class="tooltip">GitHub</span>
           </div>
           <div class="skill-card ">
-              <i class="fa-brands fa-bootstrap"></i>
+            <img src="./Images/skills/bootstrap.png"></img>
               <span class="tooltip">Bootstrap</span>
           </div>
           <div class="skill-card ">
-              <i class="fa-brands fa-python"></i>
+            <img src="./Images/skills/python.png"></img>
               <span class="tooltip">Python</span>
           </div>
           <div class="skill-card ">
-              <i class="fa-brands fa-figma"></i>
+              <img src="./Images/skills/postgresql.png"></img>
+              <span class="tooltip">SQL</span>
+          </div>
+          <div class="skill-card ">
+            <img src="./Images/skills/figma.png"></img>
               <span class="tooltip">Figma</span>
           </div>
           <div class="skill-card ">
-            <img width="50" height="50" src="./Images/blender_logo/blender_logo.png" alt="blender-3d"/>
+              <img src="./Images/skills/blender.png"></img>
               <span class="tooltip">Blender</span>
           </div>
       </div>
   </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
@@ -212,10 +217,9 @@
         </div>
       </div>
     </section>
- 
 
       <footer class="footer">
-          <p>&copy; 2025 Lasith Dissanayake | All rights reserved.</p>          
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> Lasith Dissanayake | All rights reserved.</p>  
       </footer>
       
 
