Projects and Navbar
Fixed alignment issues in projects section and updated the navbar to change colors when scrolling down.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital@0;1&family=Noto+Sans+Cuneiform&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="./Images/Profile/L.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="./styles.css" rel="stylesheet">
     <link href="./mediaqueries.css" rel="stylesheet">
@@ -39,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
+                    <li class="nav-item">
+                      <a class=" nav-link resume-btn" href="./resources/Lasith_Dissanayake_resume.pdf" download>Download CV<a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -49,9 +51,7 @@
             <h1 class="main-title">
                 <span class="animated-text">Lasith Dissanayake</span>
             </h1>
-            <p class="subtitle">FRONTEND DEVELOPER</p>
-            <a href="./resources/Lasith_Dissanayake_resume.pdf" download><button class="resume-btn" >DOWNLOAD THE RESUME</button></a>
-            <br>
+            <p class="subtitle"> Freelance  Web  Developer </p>
             <br>
         </section>
     </main>
@@ -73,33 +73,33 @@
       <div class="section-content">
           <h2 class="section-title">Projects</h2>
           <div class="projects-grid">
-              <div class="project-card">
-                  <div class="project-image">
-                      <img src="./Images/project-images/04_AutoScroller/AutoScroller.png" alt="AutoScroller Project" />
-                  </div>
-                  <div class="project-info">
-                      <h3>AutoScroller</h3>
-                      <p>Detecting Eye Movement and scrolling up and down automatically.</p>
-                      <div class="project-links">
-                          <a href="https://github.com/DissanayakeLYB/AutoScroller" class="project-link">GitHub</a>
-                      </div>
+            <div class="project-card">
+              <div class="project-image">
+                  <img src="./Images/project-images/04_AutoScroller/AutoScroller.png" alt="AutoScroller Project" />
+              </div>
+              <div class="project-info">
+                  <h3>AutoScroller</h3>
+                  <p>Detecting Eye Movement and scrolling up and down automatically.</p>
+                  <div class="project-links">
+                      <a href="https://github.com/DissanayakeLYB/AutoScroller" class="project-link" target="_blank">GitHub</a>
                   </div>
               </div>
-              <div class="project-card">
-                  <div class="project-image">
-                      <img src="./Images/project-images/03_AgentArticle/01.png" alt="AgentArticle Project" />
-                  </div>
-                  <div class="project-info">
-                      <h3>AgentArticle</h3>
-                      <p>Automatically writes articles an article on a given topic and rephrases it until the AI content detected less than 10%. </p>
-                      <div class="project-links">
-                          <a href="https://github.com/DissanayakeLYB/AutoScroller" class="project-link">GitHub</a>
-                      </div>
-                  </div>
+            </div>
+            <div class="project-card">
+              <div class="project-image">
+                  <img src="./Images/project-images/03_AgentArticle/01.png" alt="AgentArticle Project" />
               </div>
+              <div class="project-info">
+                <h3>AgentArticle</h3>
+                <p>Automatically writes articles on a given topic and rephrases it until the AI content detected is less than 10%.</p>
+                <div class="project-links">
+                    <a href="https://github.com/DissanayakeLYB/AgentArticle" class="project-link" target="_blank">GitHub</a>
+                </div>
+              </div>
+            </div>
           </div>
       </div>
-  </section>
+    </section>
       
 
     <!-- <section id="blog" class="blog-section">
@@ -147,47 +147,47 @@
       <h2>Skills</h2>
       <div class="skills-grid">
           <div class="skill-card ">
-            <img src="./Images/skills/html.png"></img>
+            <img src="./Images/skills/html.png" alt="html logo"></img>
               <span class="tooltip">HTML</span>
           </div>
-          <div class="skill-card ">
-            <img src="./Images/skills/css.png"></img>
+          <div class="skill-card">
+            <img src="./Images/skills/css.png" alt="css logo"></img>
               <span class="tooltip">CSS</span>
           </div>
           <div class="skill-card ">
-            <img src="./Images/skills/javascript.png"></img>
+            <img src="./Images/skills/javascript.png" alt="javascript logo"></img>
               <span class="tooltip">JavaScript</span>
           </div>
           <div class="skill-card ">
-            <img src="./Images/skills/react.png"></img>
+            <img src="./Images/skills/react.png" alt="react logo"></img>
               <span class="tooltip">React</span>
           </div>
           <div class="skill-card ">
-            <img src="./Images/skills/git.png"></img>
+            <img src="./Images/skills/git.png" alt="git logo"></img>
               <span class="tooltip">Git</span>
           </div>
           <div class="skill-card ">
-            <img style="filter: invert(1);" src="./Images/skills/github.png"></img>
+            <img style="filter: invert(1);" src="./Images/skills/github.png" alt="github logo"></img>
               <span class="tooltip">GitHub</span>
           </div>
           <div class="skill-card ">
-            <img src="./Images/skills/bootstrap.png"></img>
+            <img src="./Images/skills/bootstrap.png" alt="bootstrap logo"></img>
               <span class="tooltip">Bootstrap</span>
           </div>
           <div class="skill-card ">
-            <img src="./Images/skills/python.png"></img>
+            <img src="./Images/skills/python.png" alt="python logo"></img>
               <span class="tooltip">Python</span>
           </div>
           <div class="skill-card ">
-              <img src="./Images/skills/postgresql.png"></img>
+              <img src="./Images/skills/postgresql.png" alt="postgresql logo"></img>
               <span class="tooltip">SQL</span>
           </div>
           <div class="skill-card ">
-            <img src="./Images/skills/figma.png"></img>
+            <img src="./Images/skills/figma.png" alt="figma logo"></img>
               <span class="tooltip">Figma</span>
           </div>
           <div class="skill-card ">
-              <img src="./Images/skills/blender.png"></img>
+              <img src="./Images/skills/blender.png" alt="blender logo"></img>
               <span class="tooltip">Blender</span>
           </div>
       </div>
@@ -222,7 +222,6 @@
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Lasith Dissanayake | All rights reserved.</p>  
       </footer>
       
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
