--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasith | Portfolio</title>
     <meta name="msapplication-square70x70logo" content=".../icons8-blender 3d-ios7-70.png">
+    <meta name="description" content="Lasith Dissanayake - Freelance Web Developer Portfolio. Passionate about frontend development, responsive design, and building intuitive user interfaces.">
+    <meta name="author" content="Lasith Dissanayake">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -81,7 +84,7 @@
                   <h3>AutoScroller</h3>
                   <p>Detecting Eye Movement and scrolling up and down automatically.</p>
                   <div class="project-links">
-                      <a href="https://github.com/DissanayakeLYB/AutoScroller" class="project-link" target="_blank">GitHub</a>
+                      <a href="https://github.com/DissanayakeLYB/AutoScroller" class="project-link" target="_blank" rel="noopener noreferrer">GitHub</a>
                   </div>
               </div>
             </div>
@@ -93,7 +96,7 @@
                 <h3>AgentArticle</h3>
                 <p>Automatically writes articles on a given topic and rephrases it until the AI content detected is less than 10%.</p>
                 <div class="project-links">
-                    <a href="https://github.com/DissanayakeLYB/AgentArticle" class="project-link" target="_blank">GitHub</a>
+                    <a href="https://github.com/DissanayakeLYB/AgentArticle" class="project-link" target="_blank" rel="noopener noreferrer">GitHub</a>
                 </div>
               </div>
             </div>
@@ -211,8 +214,8 @@
           <button type="submit" class="submit-btn">Send Message</button>
         </form>
         <div class="social-links">
-          <a href="https://github.com/DissanayakeLYB" target="_blank"><i class="fa-brands fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/lasith-dissanayake/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/DissanayakeLYB" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/lasith-dissanayake/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
           <a href="mailto:lasithdissanayake.official@gmail.com"><i class="fa fa-envelope "></i></a>
         </div>
       </div>
