--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasith | Portfolio</title>
     <meta name="msapplication-square70x70logo" content=".../icons8-blender 3d-ios7-70.png">
-    <meta name="description" content="Lasith Dissanayake - Freelance Web Developer Portfolio. Passionate about frontend development, responsive design, and building intuitive user interfaces.">
+
+    <meta name="title" content="Lasith Dissanayake | Frontend Web Developer">
+    <meta name="description" content="Passionate Frontend Web Developer and Designer crafting beautiful, responsive, and functional websites. Explore my portfolio, projects, and skills.">
+    <meta name="keywords" content="Lasith, Web Developer, Frontend Developer, Portfolio, Freelance Developer, Responsive Web Design, UI/UX Designer">
     <meta name="author" content="Lasith Dissanayake">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="google" content="notranslate">
+
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Lasith Dissanayake | Frontend Web Developer">
+    <meta property="og:url" content="https://lasith.netlify.app/">
+    <meta property="og:title" content="Lasith Dissanayake | Frontend Web Developer">
+    <meta property="og:description" content="Explore my portfolio of web development projects and skills.">
+    <meta property="og:image" content="https://lasith.netlify.app/Images/Profile/Lasith_small.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
