--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="title" content="Lasith Dissanayake | Frontend Web Developer">
     <meta name="description" content="Passionate Frontend Web Developer and Designer crafting beautiful, responsive, and functional websites. Explore my portfolio, projects, and skills.">
-    <meta name="keywords" content="Lasith, Web Developer, Frontend Developer, Portfolio, Freelance Developer, Responsive Web Design, UI/UX Designer">
+    <meta name="keywords" content="Lasith, Lasith Dissanayake, University of Moratuwa, Web development, HTML, CSS, JS, Fullstack Developer, Mobile Developer, Android Developer, Kotlin, Jetpack Compose, Web Developer, Frontend Developer, Portfolio, Freelance Developer, Responsive Web Design, UI/UX Designer">
     <meta name="author" content="Lasith Dissanayake">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="./styles.css" rel="stylesheet">
     <link href="./mediaqueries.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./Images/Profile/L.png">
 
 </head>
 <body>
