Added ML expereiences

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h1 class="main-title">
                 <span class="animated-text">Lasith Dissanayake</span>
             </h1>
-            <p class="subtitle"> Freelance  Web  Developer </p>
+            <p class="subtitle">  Web  Developer | Machine Learning Enthusiast </p>
             <br>
         </section>
     </main>
@@ -79,7 +79,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-grid">
                 <div class="about-text">
-                    <p>I'm a passionate Frontend Developer and Designer with a keen eye for creating beautiful, functional web experiences. With hands-on experience as a freelance developer, I specialize in crafting responsive and intuitive user interfaces, blending clean code with innovative design solutions.</p>
+                    <p>I'm a passionate developer with a keen eye for creating beautiful, responsive web experiences and building functional AI-powered solutions. With hands-on experience as a freelance developer, I specialize in crafting intuitive user interfaces using modern frontend technologies, while also exploring the power of machine learning to create smarter, more dynamic applications. Blending clean code with innovative design and data-driven thinking, I bridge the gap between frontend finesse and intelligent functionality.</p>
                 </div>
             </div>
         </div>
