--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="hero-badge">Frontend Engineer</div>
                 <h1 class="hero-title">LASITH DISSANAYAKE</h1>
                 <p class="hero-subtitle">
-                    Helping businesses get online with fast, modern websites
+                    Building web experiences convert visitors into customers
                 </p>
                 <div class="hero-cta-group">
                     <a href="#projects" class="hero-cta primary">
@@ -472,6 +472,11 @@
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script
+            async
+            src="https://scripts.simpleanalyticscdn.com/latest.js"
+        ></script>
+
         <script src="script.js"></script>
     </body>
 </html>
