update the projets section

--- a/index.html
+++ b/index.html
@@ -230,42 +230,6 @@
                     </button>
                 </div>
                 <div class="projects-grid">
-                    <!-- AgentArticle Project -->
-                    <!-- <div class="project-card" data-category="ai">
-                        <div class="project-image">
-                            <img
-                                src="Images/project-images/03_AgentArticle/01.png"
-                                alt="AgentArticle Project"
-                            />
-                        </div>
-                        <div class="project-content">
-                            <h3 class="project-title">AgentArticle</h3>
-                            <p class="project-description">
-                                An AI agent that generates articles for a user
-                                mentioned topic and refine content until AI
-                                detection reduces than 10%.
-                            </p>
-                            <div class="project-tags">
-                                <span class="project-tag">Python</span>
-                                <span class="project-tag">Streamlit</span>
-                                <span class="project-tag">Selenium</span>
-                                <span class="project-tag">Groq API</span>
-                            </div>
-                            <div class="project-links">
-                                <a
-                                    href="https://agentic-articles.streamlit.app/"
-                                    class="project-link primary"
-                                    >View Project</a
-                                >
-                                <a
-                                    href="https://github.com/DissanayakeLYB/Agentic-Articles"
-                                    class="project-link secondary"
-                                    >GitHub</a
-                                >
-                            </div>
-                        </div>
-                    </div> -->
-
                     <!-- AutoScroller Project -->
                     <div class="project-card" data-category="tools">
                         <div class="project-image">
@@ -274,18 +238,20 @@
                                 alt="AutoScroller Project"
                             />
                         </div>
-                        <div class="project-content">
-                            <h3 class="project-title">AutoScroller</h3>
-                            <p class="project-description">
-                                A browser extension that provides smooth
-                                auto-scrolling functionality for better reading
-                                experience.
-                            </p>
-                            <div class="project-tags">
-                                <span class="project-tag">Python</span>
-                                <span class="project-tag">OpenCV</span>
-                                <span class="project-tag">PyAutoGUI</span>
-                                <span class="project-tag">MediaPipe</span>
+                        <div class="project-body">
+                            <div class="project-content-section">
+                                <h3 class="project-title">AutoScroller</h3>
+                                <p class="project-description">
+                                    A browser extension that provides smooth
+                                    auto-scrolling functionality for better
+                                    reading experience.
+                                </p>
+                                <div class="project-tags">
+                                    <span class="project-tag">Python</span>
+                                    <span class="project-tag">OpenCV</span>
+                                    <span class="project-tag">PyAutoGUI</span>
+                                    <span class="project-tag">MediaPipe</span>
+                                </div>
                             </div>
                             <div class="project-links">
                                 <a
@@ -312,17 +278,21 @@
                                 alt="MCD Project"
                             />
                         </div>
-                        <div class="project-content">
-                            <h3 class="project-title">MSE Careers Day</h3>
-                            <p class="project-description">
-                                A web platform to connect Materials Science and
-                                Engineering students with potential employers
-                                and showcase their skills.
-                            </p>
-                            <div class="project-tags">
-                                <span class="project-tag">Next.js</span>
-                                <span class="project-tag">Tailwind CSS</span>
-                                <span class="project-tag">Vercel</span>
+                        <div class="project-body">
+                            <div class="project-content-section">
+                                <h3 class="project-title">MSE Careers Day</h3>
+                                <p class="project-description">
+                                    A web platform to connect Materials Science
+                                    and Engineering students with potential
+                                    employers and showcase their skills.
+                                </p>
+                                <div class="project-tags">
+                                    <span class="project-tag">Next.js</span>
+                                    <span class="project-tag"
+                                        >Tailwind CSS</span
+                                    >
+                                    <span class="project-tag">Vercel</span>
+                                </div>
                             </div>
                             <div class="project-links">
                                 <a
@@ -349,16 +319,21 @@
                                 alt="ChatPDF Wrapper Project"
                             />
                         </div>
-                        <div class="project-content">
-                            <h3 class="project-title">ChatPDF Wrapper</h3>
-                            <p class="project-description">
-                                A Python wrapper for ChatPDF API that simplifies
-                                PDF document processing and analysis.
-                            </p>
-                            <div class="project-tags">
-                                <span class="project-tag">Python</span>
-                                <span class="project-tag">API</span>
-                                <span class="project-tag">PDF Processing</span>
+                        <div class="project-body">
+                            <div class="project-content-section">
+                                <h3 class="project-title">ChatPDF Wrapper</h3>
+                                <p class="project-description">
+                                    A Python wrapper for ChatPDF API that
+                                    simplifies PDF document processing and
+                                    analysis.
+                                </p>
+                                <div class="project-tags">
+                                    <span class="project-tag">Python</span>
+                                    <span class="project-tag">API</span>
+                                    <span class="project-tag"
+                                        >PDF Processing</span
+                                    >
+                                </div>
                             </div>
                             <div class="project-links">
                                 <a
