Update projects and remove names of the skills

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Navigation -->
         <nav class="navbar" id="navbar">
             <div class="container">
-                <a href="#" class="navbar-brand" id="refresh-btn">
+                <a href="#hero" class="navbar-brand">
                     &lt;Lasith/&gt;</a
                 >
                 <ul class="navbar-nav">
@@ -52,12 +52,12 @@
         </nav>
 
         <!-- Hero Section -->
-        <section class="hero-section">
+        <section class="hero-section" id="hero">
             <div class="hero-content">
                 <div class="hero-badge">Frontend Engineer</div>
                 <h1 class="hero-title">LASITH DISSANAYAKE</h1>
                 <p class="hero-subtitle">
-                    Building web experiences convert visitors into customers
+                    Building Websites to convert Visitors to Customers 
                 </p>
                 <div class="hero-cta-group">
                     <a href="#projects" class="hero-cta primary">
@@ -80,8 +80,8 @@
                         <h3>Who Am I?</h3>
                         <p>
                             I'm a <strong>Frontend Engineer</strong> with
-                            expertise in <strong>React</strong>,
-                            <strong>Next.js</strong>, and modern JavaScript
+                            experience in <strong>React</strong>,
+                            <strong>Next.js</strong>, the modern JavaScript
                             frameworks. I specialize in building
                             <strong>responsive</strong> and
                             <strong>accessible</strong> web applications that
@@ -123,39 +123,33 @@
                         <div class="skill-list">
                             <div class="skill-item">
                                 <img src="Images/skills/html.png" alt="HTML" />
-                                <span>HTML5</span>
                             </div>
                             <div class="skill-item">
                                 <img src="Images/skills/css.png" alt="CSS" />
-                                <span>CSS3</span>
                             </div>
                             <div class="skill-item">
                                 <img
                                     src="Images/skills/javascript.png"
                                     alt="JavaScript"
                                 />
-                                <span>JavaScript</span>
                             </div>
                             <div class="skill-item">
                                 <img
                                     src="Images/skills/react.png"
                                     alt="React"
                                 />
-                                <span>React</span>
                             </div>
                             <div class="skill-item">
                                 <img
                                     src="Images/skills/nextjs.png"
                                     alt="Next.js"
                                 />
-                                <span>Next.js</span>
                             </div>
                             <div class="skill-item">
                                 <img
                                     src="Images/skills/tailwind-css.png"
                                     alt="Tailwind CSS"
                                 />
-                                <span>Tailwind CSS</span>
                             </div>
                         </div>
                     </div>
@@ -167,14 +161,12 @@
                                     src="Images/skills/python.png"
                                     alt="Python"
                                 />
-                                <span>Python</span>
                             </div>
                             <div class="skill-item">
                                 <img
                                     src="Images/skills/postgresql.png"
                                     alt="PostgreSQL"
                                 />
-                                <span>PostgreSQL</span>
                             </div>
                         </div>
                     </div>
@@ -186,25 +178,21 @@
                                     src="Images/skills/figma.png"
                                     alt="Figma"
                                 />
-                                <span>Figma</span>
                             </div>
                             <div class="skill-item">
                                 <img src="Images/skills/git.png" alt="Git" />
-                                <span>Git</span>
                             </div>
                             <div class="skill-item">
                                 <img
                                     src="Images/skills/github.png"
                                     alt="GitHub"
                                 />
-                                <span>GitHub</span>
                             </div>
                             <div class="skill-item">
                                 <img
                                     src="Images/skills/blender.png"
                                     alt="Blender"
                                 />
-                                <span>Blender</span>
                             </div>
                         </div>
                     </div>
@@ -311,6 +299,92 @@
                         </div>
                     </div>
 
+                    <!-- Psychdevs Project -->
+                    <div class="project-card" data-category="web">
+                        <div class="project-image">
+                            <img
+                                src="./Images/project-images/08_PsychDevs/HeroSection.png"
+                                alt="PsychDevs"
+                            />
+                        </div>
+                        <div class="project-body">
+                            <div class="project-content-section">
+                                <h3 class="project-title">PsychDevs</h3>
+                                <p class="project-description">
+                                    The portfolio website containing the
+                                    services provided by the web agency named
+                                    "PsychDevs".
+                                </p>
+                                <div class="project-tags">
+                                    <span class="project-tag">Next.js</span>
+                                    <span class="project-tag">ShadCN</span>
+                                    <span class="project-tag"
+                                        >Tailwind CSS</span
+                                    >
+                                    <span class="project-tag"
+                                        >Lucide React</span
+                                    >
+                                    <span class="project-tag">Netlify</span>
+                                </div>
+                            </div>
+                            <div class="project-links">
+                                <a
+                                    href="https://psychdevs.site/"
+                                    class="project-link primary"
+                                    target="_blank"
+                                    >Visit Site</a
+                                >
+                                <a
+                                    href="https://github.com/PsychDevs/Official-Website"
+                                    class="project-link secondary"
+                                    target="_blank"
+                                    >GitHub</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Devlinker Project -->
+                    <div class="project-card" data-category="tools">
+                        <div class="project-image">
+                            <img
+                                src="Images/project-images/07_DevLinker/DevLinker.png"
+                                alt="Devlinker"
+                            />
+                        </div>
+                        <div class="project-body">
+                            <div class="project-content-section">
+                                <h3 class="project-title">Devlinker</h3>
+                                <p class="project-description">
+                                    DevLinker is a simple web app that helps
+                                    organize, manage, useful links.
+                                </p>
+                                <div class="project-tags">
+                                    <span class="project-tag">React</span>
+                                    <span class="project-tag">TypeScript</span>
+                                    <span class="project-tag"
+                                        >Tailwind CSS</span
+                                    >
+                                    <span class="project-tag">Netlify</span>
+                                </div>
+                            </div>
+                            <div class="project-links">
+                                <a
+                                    href="https://dev-linker.netlify.app/"
+                                    class="project-link primary"
+                                    target="_blank"
+                                    >View Tool</a
+                                >
+                                <a
+                                    href="https://github.com/DissanayakeLYB/DevLinker"
+                                    class="project-link secondary"
+                                    target="_blank"
+                                    >GitHub</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- ChatPDF Wrapper Project -->
                     <div class="project-card" data-category="tools">
                         <div class="project-image">
@@ -323,16 +397,15 @@
                             <div class="project-content-section">
                                 <h3 class="project-title">ChatPDF Wrapper</h3>
                                 <p class="project-description">
-                                    A Python wrapper for ChatPDF API that
-                                    simplifies PDF document processing and
-                                    analysis.
+                                    A ChatPDF wrapper using ChatPDF API that
+                                    lets you chat with your PDFs with 5000
+                                    messages and 500 pages.
                                 </p>
                                 <div class="project-tags">
-                                    <span class="project-tag">Python</span>
-                                    <span class="project-tag">API</span>
-                                    <span class="project-tag"
-                                        >PDF Processing</span
-                                    >
+                                    <span class="project-tag">HTML</span>
+                                    <span class="project-tag">CSS</span>
+                                    <span class="project-tag">JavaScript</span>
+                                    <span class="project-tag">ChatPDF API</span>
                                 </div>
                             </div>
                             <div class="project-links">
@@ -431,10 +504,10 @@
                         ><i class="fas fa-envelope"></i
                     ></a>
                     <a
-                        href="https://twitter.com/lasith_dev"
+                        href="https://x.com/DissanayakeLYB"
                         target="_blank"
                         class="social-link"
-                        ><i class="fab fa-twitter"></i
+                        ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" ><path d="M453.2 112L523.8 112L369.6 288.2L551 528L409 528L297.7 382.6L170.5 528L99.8 528L264.7 339.5L90.8 112L236.4 112L336.9 244.9L453.2 112zM428.4 485.8L467.5 485.8L215.1 152L173.1 152L428.4 485.8z"/></svg></i
                     ></a>
                 </div>
                 <div class="footer-bottom">
